fixed email covering link and removed underline from About link

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -19,7 +19,7 @@ h1 {
 }
 
 .headerOne {
-  padding-top: 40px;
+  padding-top: 35px;
 }
 
 h2 {
@@ -47,7 +47,7 @@ h2 {
   margin: 0;
   line-height: 15px;
   margin-top: 60px;
-  margin-bottom: -25px;
+  margin-bottom: 5px;
 }
 
 #svgCanvas {
