--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -52,7 +52,8 @@ body {
   display: inline-block;
   font-size: 19px;
   text-align: center;
-  height: 30px;
+  text-decoration: none;
+  height: 22px;
   font-weight: bold;
   color: rgb(250, 243, 46);
 }
